apps/kubernetes/k3s/apps/gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: gitea
spec:
  selector:
    app: gitea
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh
  namespace: gitea
spec:
  type: LoadBalancer
  selector:
    app: gitea
  ports:
    - name: ssh
      port: 2222
      targetPort: 22
